--- a/MVCShoesShop/MVCShoesShop/Views/CTPGH/Delete.cshtml
+++ b/MVCShoesShop/MVCShoesShop/Views/CTPGH/Delete.cshtml
@@ -7,7 +7,7 @@
 
 <h2 style="text-align:center; font-weight:bold">Xóa phiếu giao hàng</h2>
 
-<h3 style="text-align:center; font-weight:bold">Bạn có muốn xóa phiếu giao hàng này?</h3>
+<h3 style="text-align:center">Bạn có muốn xóa phiếu giao hàng này?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
@@ -54,8 +54,10 @@
             {
                 @Html.AntiForgeryToken()
                 <div class="form-actions no-color">
-                    <input type="submit" value="Xóa" class="btn btn-default" /> |
-                    @Html.ActionLink("Trở về", "Index")
+                    <input type="submit" value="Xóa" class="btn btn-default" style="background-color:yellowgreen; color:black; font-weight:bold; font-size:13pt; padding:5px 15px 5px 15px; text-align:center" />
+                    <a href="@Url.Action("Index","CTPGH")" style="background-color:burlywood; color:black; font-weight:bold; font-size:13pt; padding:8px 15px 8px 15px; text-align:center">
+                        Trở về
+                    </a>
                 </div>
             }
         </dd>
