--- a/MVCShoesShop/MVCShoesShop/Views/CTPGH/Details.cshtml
+++ b/MVCShoesShop/MVCShoesShop/Views/CTPGH/Details.cshtml
@@ -80,7 +80,10 @@
         @*Button*@
         <dt></dt>
         <dd>
-            @Html.ActionLink("Back to List", "Index")
+            <br />
+            <a href="@Url.Action("Index","CTPGH")" style="background-color:burlywood; color:black; font-weight:bold; font-size:13pt; padding:8px 15px 8px 15px; text-align:center">
+                Trở về
+            </a>
         </dd>
     </dl>
 </div>
