--- a/MVCShoesShop/MVCShoesShop/Views/LoaiSP/Create.cshtml
+++ b/MVCShoesShop/MVCShoesShop/Views/LoaiSP/Create.cshtml
@@ -25,10 +25,10 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Thêm" class="btn btn-default" /> |
-                <button>
-                    @Html.ActionLink("Trở về", "Index")
-                </button>
+                <input type="submit" value="Tạo" class="btn btn-default" style="background-color:yellowgreen; color:black; font-weight:bold; font-size:13pt; padding:5px 15px 5px 15px; text-align:center" />
+                <a href="@Url.Action("Index","LoaiSP")" style="background-color:burlywood; color:black; font-weight:bold; font-size:13pt; padding:8px 15px 8px 15px; text-align:center">
+                    Trở về
+                </a>
             </div>
         </div>
     </div>
