--- a/MVCShoesShop/MVCShoesShop/Views/User/DangNhap.cshtml
+++ b/MVCShoesShop/MVCShoesShop/Views/User/DangNhap.cshtml
@@ -31,11 +31,11 @@
         <tr style="height:40px">
             <td></td>
             <td>
-                <input type="submit" value="Login" />
+                <input type="submit" value="Login" style="background-color:deepskyblue; color:black; font-weight:bold; padding: 8px 20px 8px 20px;"/>
             </td>
         </tr>
     }
 </table>
-<p style="text-align:center; font-weight:bold">Nếu chưa có tài khoản hãy <a href="@Url.Action("DangKy","User")">đăng ký</a></p>
+<p style="text-align:center; font-weight:bold">New customer ? <a href="@Url.Action("DangKy","User")">Create an account</a></p>
 
 
