--- a/MVCShoesShop/MVCShoesShop/Views/GioHang/DatHang.cshtml
+++ b/MVCShoesShop/MVCShoesShop/Views/GioHang/DatHang.cshtml
@@ -6,16 +6,16 @@
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
-<h2 style="text-align:center; font-weight:bold">Thông tin hàng hóa</h2>
+<h2 style="text-align:center; font-weight:bold">Commodity Information</h2>
 
 <table class="" align="center" border="1" style="width:1350px; height:300px">
     <tr style="text-align:center; font-weight:bold">
-        <td> Mã sản phẩm </td>
-        <td> Tên sản phẩm </td>
-        <td> Hình ảnh </td>
-        <td> Số lượng </td>
-        <td> Đơn giá </td>
-        <td> Thành tiền </td>
+        <td> Code </td>
+        <td> Name </td>
+        <td> Images </td>
+        <td> Amount </td>
+        <td> Prices </td>
+        <td> Total </td>
         @*<td width="50px"></td>
             <td width="50px"></td>
             <td width="50px"></td>*@
@@ -47,49 +47,51 @@
         </tr>
     }
     <tr style="font-weight: bold; text-align:right; color:red">
-        <td colspan="3"> Số lượng sản phẩm: @ViewBag.Tongsoluong</td>
-        <td colspan="3"> Tổng tiền: @String.Format("{0:0.00}", ViewBag.Tongtien) $ </td>
+        <td colspan="3" style="padding-right:15pt"> Amount of Product : @ViewBag.Tongsoluong</td>
+        <td colspan="3" style="padding-right:15pt"> Total : @String.Format("{0:0.00}", ViewBag.Tongtien) $ </td>
     </tr>
     <tr style="font-weight: bold; color:blue; text-align:right ">
-        <td colspan="6">
-            @Html.ActionLink("Trở về giỏ hàng", "Giohang", "GioHang")
+        <td colspan="6" style="padding-right:15pt">
+            @*@Html.ActionLink("Back to Cart", "Giohang", "GioHang")*@
+            <a href="@Url.Action("Giohang", "GioHang")" style="background-color:skyblue; float:right; color:black; font-weight:bold; padding: 8px 20px 8px 20px; text-align:center">Back to Cart</a>
         </td>
     </tr>
 </table>
 
-<h2 style="text-align:center; font-weight:bold">Thông tin đơn đặt hàng</h2>
+<h2 style="text-align:center; font-weight:bold">Order Information</h2>
 @{
     KHACH_HANG kh = (KHACH_HANG)Session["Taikhoan"];
 }
-<table align="center">
-    @using (Html.BeginForm())
-    {
+
+@using (Html.BeginForm())
+{
+    <table align="center">
         <tr style="height:40px">
-            <td> Họ tên khách hàng : </td>
-            <td style="font-weight:bold"> @kh.TenKH</td>
+            <td> Customer's Name : </td>
+            <td style="font-weight:bold">&nbsp;@kh.TenKH</td>
         </tr>
         <tr style="height:40px">
-            <td> Địa chỉ : </td>
-            <td style="font-weight:bold"> @kh.DiaChi</td>
+            <td> Address : </td>
+            <td style="font-weight:bold">&nbsp;@kh.DiaChi</td>
         </tr>
         <tr style="height:40px">
-            <td> Điện thoại : </td>
-            <td style="font-weight:bold"> @kh.SDT</td>
+            <td> Phone : </td>
+            <td style="font-weight:bold">&nbsp;@kh.SDT</td>
         </tr>
         <tr style="height:40px">
-            <td> Ngày đặt : </td>
-            <td style="font-weight:bold"> @DateTime.Now.ToShortDateString() </td>
+            <td> Order Date : </td>
+            <td style="font-weight:bold">&nbsp;@DateTime.Now.ToShortDateString() </td>
         </tr>
         <tr style="height:40px">
-            <td> Ghi chú : </td>
-            <td style="font-weight:bold"> @Html.TextArea("GhiChu") </td>
+            <td> Note : </td>
+            <td style="font-weight:bold">&nbsp;@Html.TextArea("GhiChu") </td>
         </tr>
-        <tr style="height:40px">
-            <td></td>
-            <td style="font-weight:bold">
-                <input type="submit" value="ĐỒNG Ý ĐẶT HÀNG" />
-            </td>
-        </tr>
-    }
-</table>
+
+    </table>
+    <br>
+    <p style="text-align:center">
+        <input type="submit" value="Confirm Order" style="background-color:olivedrab; color:black; font-weight:bold; padding: 8px 20px 8px 20px;" />
+    </p>
+}
+
 
