--- a/MVCShoesShop/MVCShoesShop/Views/GioHang/Xacnhandonhang.cshtml
+++ b/MVCShoesShop/MVCShoesShop/Views/GioHang/Xacnhandonhang.cshtml
@@ -4,8 +4,10 @@
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
-<h2 style="text-align:center; font-weight:bold">Đơn hàng của quý khách đã được chúng tôi ghi nhận. Chúng tôi sẽ liên hệ quý khách trong thời gian sớm nhất và giao hàng đúng hẹn</h2>
+<h2 style="text-align:center; font-weight:bold">Your order is waiting. We will contact to you soon</h2>
 <p style="text-align:center; font-weight:bold">
-    @Html.ActionLink("VỀ TRANG CHỦ", "Index", "Shop")
+    @*@Html.ActionLink("Back to Home", "Index", "Shop")*@
+    <br>
+    <a href="@Url.Action("Index", "Shop")" style="background-color:lightslategray; color:black; font-weight:bold; padding: 8px 20px 8px 20px; text-align:center">Back to Home</a>
 </p>
 
