--- a/MVCShoesShop/MVCShoesShop/Views/KhachHang/Delete.cshtml
+++ b/MVCShoesShop/MVCShoesShop/Views/KhachHang/Delete.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2 style="font-weight:bold">Xóa thông tin khách hàng</h2>
+<h2 style="font-weight:bold; text-align:center">Xóa thông tin khách hàng</h2>
 
-<h3>Bạn có muốn xóa thông tin khách hàng này?</h3>
+<h3 style="text-align:center">Bạn có muốn xóa thông tin khách hàng này?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
@@ -46,14 +46,18 @@
         <dd>
             @Html.DisplayFor(model => model.IDLogin)
         </dd>
+        <dt></dt>
+        <dd>
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+                <div class="form-actions no-color">
+                    <input type="submit" value="Xóa" class="btn btn-default" style="background-color:yellowgreen; color:black; font-weight:bold; font-size:13pt; padding:5px 15px 5px 15px; text-align:center" />
+                    <a href="@Url.Action("Index","KhachHang")" style="background-color:burlywood; color:black; font-weight:bold; font-size:13pt; padding:8px 15px 8px 15px; text-align:center">
+                        Trở về
+                    </a>
+                </div>
+            }
+        </dd>
     </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Xóa" class="btn btn-default" /> |
-            @Html.ActionLink("Trở về", "Index")
-        </div>
-    }
 </div>
