--- a/MVCShoesShop/MVCShoesShop/Views/Shop/Details.cshtml
+++ b/MVCShoesShop/MVCShoesShop/Views/Shop/Details.cshtml
@@ -26,19 +26,20 @@
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
-<h1 style="text-align:center; font-weight:bold">Chi tiết sản phẩm</h1>
+<h1 style="text-align:center; font-weight:bold">Details</h1>
 
 <div>
     <div style="width:40%; float:left; border-left: dotted 1px; border-color:azure">
         <img src="~/images/@Model.Images" style="width:520px ; height:550px" />
     </div>
     <div style="width:60%; float:left; padding:10px">
-        <h2 style="font-weight:bold; color:red">Tên sản phẩm : @Model.TenSP </h2>
-        <h3 style="text-align:justify"><span style="font-weight:bold"> Đơn giá : </span>$ @String.Format("{0:0.00}", Model.DonGia) </h3>
-        <h3 style="text-align:justify"><span style="font-weight:bold"> Tên loại : </span>@Model.LOAI_SAN_PHAM.TenLoai </h3>
+        <h2 style="font-weight:bold; color:red">Product's Name : @Model.TenSP </h2>
+        <h3 style="text-align:justify"><span style="font-weight:bold"> Prices : </span>$ @String.Format("{0:0.00}", Model.DonGia) </h3>
+        <h3 style="text-align:justify"><span style="font-weight:bold"> Category : </span>@Model.LOAI_SAN_PHAM.TenLoai </h3>
+        <h3 style="text-align:justify"><span style="font-weight:bold"> Remaining : </span>@Model.SoLuongCon </h3>
         <div id="Datmua">
             <a href="@Url.Action("ThemGioHang", "GioHang", new { @iMaSP = @Model.MaSP, @strURL=Request.Url.ToString() }) " class="list-group-item">
-                Đặt mua
+                Add to Cart
             </a>
         </div>
     </div>
