--- a/MVCShoesShop/MVCShoesShop/Views/Shop/spTheoLoai.cshtml
+++ b/MVCShoesShop/MVCShoesShop/Views/Shop/spTheoLoai.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
-<h1 class="text-center" style="font-weight:bold">&bullet; CATEGORY SHOES &bullet;</h1>
+<h1 class="text-center" style="font-weight:bold">&bullet; CATEGORIES &bullet;</h1>
 <div class="allcontain">
     <div class="grid">
         <div class="row">
@@ -29,7 +29,7 @@
                                 <a href="@Url.Action("Details", "Shop", new { id = pro.MaSP })" class="list-group-item" style="width:100px; text-align:center; float:left; background-color:white; font-weight:bold; color:black; width:110px">
                                     Details
                                 </a>
-                                <a href="@Url.Action("ThemGioHang", "GioHang", new { @iMaSP = pro.MaSP, @strURL=Request.Url.ToString() }) " class="list-group-item" style="width:100px; text-align:center; float:right; background-color:black; font-weight:bold; color:white; width:110px">
+                                <a href="@Url.Action("ThemGioHang", "GioHang", new { @iMaSP = pro.MaSP, @strURL=Request.Url.ToString() }) " class="list-group-item" style="width:110px; text-align:center; float:right; background-color:black; font-weight:bold; color:white; width:110px">
                                     Add to Cart
                                 </a>
                                 @*<button style="font-weight:bold; width:100px">@Html.ActionLink("Add to Cart","ThemGioHang","GioHang", new { @iMaSP = pro.MaSP, @strURL = Request.Url.ToString() })</button><br>*@
